# da4_home_assignment

./: Link to GitHub repository.txt  README.md  da4_submission_report.html  pyproject.toml
da4_home_assignment/: da4_home_assignment.ipynb
data/raw/: data.parquet
data/working/: metadata.xlsx
results/final/tables/: fixed_differences_models.html  omitted_based_on_all.xlsx  omitted_based_on_core.xlsx
results/raw/: database_metadata.xlsx  metadata.xlsx  omitted_based_on_all.xlsx  omitted_based_on_core.xlsx  summary_statistics_2005.xlsx  summary_statistics_2023.xlsx
