[tool.poetry]
name = "da4-home-assignment"
version = "0.1.0"
description = ""
authors = ["Istvan Peter Jaray <istvanpeterjaray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.2.3"
streamlit = "^1.42.0"
nbformat = "^5.10.4"
nbclient = "^0.10.2"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"
scipy = "^1.15.1"
wbgapi = "^1.0.12"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
datetime = "^5.5"
pathlib = "^1.0.1"
openpyxl = "^3.1.5"
stargazer = "^0.0.7"
linearmodels = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
